翻译证书有效期，CI/CD 配置
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -17,6 +17,7 @@
     "start": "Issued Date",
     "end": "Expiration Date",
     "verify_id": "Credential ID",
-    "verify_prompt": "Click the image to see the credential"
+    "verify_prompt": "Click the image to see the credential",
+    "lifetime": "Life time"
   }
 }
