--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -10,7 +10,8 @@
     "skill": "Skill",
     "certificate": "Certificate",
     "entertainment": "Entertainment",
-    "game": "Game"
+    "game": "Game",
+    "fiction": "Fiction"
   },
   "certificate": {
     "specialization": "Part of {specialization} Specialization",
@@ -31,13 +32,26 @@
     "achievement": "Achieve all accomplishments",
     "cloud": "Accomplished by watching videos",
     "play": "Accomplished in person",
-    "comment": "Reviews",
+    "comment": "Review",
     "time": "Time (hours)",
     "done": "Accomplished",
     "done_at": "Accomplished on {date}",
     "doing": "Playing",
     "todo": "Scheduling",
     "disabled": "Ultimated (Sandbox, MOBA, etc.)",
+    "message": "Ratings and reviews are personal.",
+    "warning": "This page may contain information about the plot."
+  },
+  "fiction": {
+    "title": "Title",
+    "status": "Status",
+    "date": "Date",
+    "rate": "Rate",
+    "comment": "Review",
+    "done": "Read",
+    "done_at": "Read on {date}",
+    "doing": "Reading",
+    "todo": "Scheduling",
     "message": "Ratings and reviews are personal.",
     "warning": "This page may contain information about the plot."
   }
