game 样式和翻译
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -44,9 +44,9 @@
     "status": "Status",
     "date": "Date",
     "rate": "Rate",
-    "collection": "All collected",
-    "achievement": "Achieve all accomplishments",
-    "cloud": "Accomplished by watching videos",
+    "collection": "Collected and unlocked all elements",
+    "achievement": "Achieved all accomplishments",
+    "cloud": "Watched videos",
     "play": "Accomplished in person",
     "comment": "Review",
     "time": "Time (hours)",
