--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -6,6 +6,7 @@
     "blog": "Blog",
     "resume": "Resume",
     "gitlab": "GitLab",
+    "information": "Information",
     "experience": "Experience",
     "skill": "Skill",
     "certificate": "Certificate",
@@ -13,21 +14,23 @@
     "game": "Game",
     "fiction": "Fiction",
     "milestone": "Milestone",
-    "introduction": "Self-Intro",
-    "contact": "Contact Me",
+    "introduction": "Introduction",
+    "contact": "Contact",
     "study": "Study",
     "work": "Work",
     "project": "Project",
     "research": "Research",
+    "publication": "Publication",
     "honor": "Honor",
+    "exhibit": "Exhibit",
     "exam": "Exam",
     "oj": "Online Judge",
     "technique": "Technique",
-    "movie": "Movie",
-    "anime": "Anime",
-    "music": "Music",
+    "media": "Media",
     "footprint": "Footprint",
-    "photo": "Photo"
+    "photo": "Photo",
+    "food": "Food",
+    "wish": "Wish"
   },
   "certificate": {
     "specialization": "Part of {specialization} Specialization",
