--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -6,6 +6,7 @@
     "blog": "个人博客",
     "resume": "个人简介",
     "gitlab": "代码仓库",
+    "information": "基本信息",
     "experience": "个人经历",
     "skill": "专业技能",
     "certificate": "证书",
@@ -13,21 +14,23 @@
     "game": "游戏",
     "fiction": "小说",
     "milestone": "里程碑",
-    "introduction": "个人简介",
+    "introduction": "介绍",
     "contact": "联系方式",
-    "study": "学习经历",
-    "work": "工作经历",
-    "project": "项目经历",
-    "research": "科研经历",
+    "study": "学习",
+    "work": "工作",
+    "project": "项目",
+    "research": "科研",
+    "publication": "出版",
     "honor": "荣誉榜",
+    "exhibit": "陈列室",
     "exam": "考试成绩",
     "oj": "OJ 做题记录",
     "technique": "技术栈",
-    "movie": "影视",
-    "anime": "动漫",
-    "music": "音乐",
+    "media": "影音",
     "footprint": "足迹",
-    "photo": "摄像"
+    "photo": "摄像",
+    "food": "美食",
+    "wish": "愿望"
   },
   "certificate": {
     "specialization": "属于{specialization}专项课程",
