--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -80,5 +80,22 @@
   "reserved": {
     "title": "这个页面还在施工中",
     "desc": "这个页面还在施工中，过段时间再来访问吧"
+  },
+  "media": {
+    "name": "名称",
+    "status": "状态",
+    "date": "日期",
+    "rate": "评分",
+    "type": "类型",
+    "music": "音乐",
+    "tv": "电视剧",
+    "movie": "电影",
+    "anime": "动漫",
+    "done": "已欣赏",
+    "done_at": "已于 {date} 欣赏",
+    "doing": "欣赏中",
+    "todo": "计划中",
+    "message": "评分和评价仅代表个人意见。",
+    "warning": "本页面可能包含剧透内容。"
   }
 }
