--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -97,5 +97,9 @@
     "todo": "计划中",
     "message": "评分和评价仅代表个人意见。",
     "warning": "本页面可能包含剧透内容。"
+  },
+  "photo": {
+    "date": "拍摄于 {date}",
+    "info": "描述： {info}"
   }
 }
