Fix：瀑布流的展示问题
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -99,7 +99,7 @@
     "warning": "This page may contain information about the plot."
   },
   "photo": {
-    "date": "Took on {date}",
+    "date": "Taken on {date}",
     "info": "Description: {info}"
   }
 }
