--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -101,5 +101,9 @@
   "photo": {
     "date": "Taken on {date}",
     "info": "Description: {info}"
+  },
+  "study": {
+    "till": "till",
+    "now": "now"
   }
 }
