--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -109,5 +109,12 @@
   "work": {
     "till": "till",
     "now": "now"
+  },
+  "project": {
+    "repo": "Code Repository",
+    "blog": "Development Blog",
+    "doc": "Document and Wiki",
+    "award": "Award",
+    "demo": "Demonstration"
   }
 }
