--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -109,5 +109,12 @@
   "work": {
     "till": "至",
     "now": "今"
+  },
+  "project": {
+    "repo": "代码仓库",
+    "blog": "开发博客",
+    "doc": "文档和维基百科",
+    "award": "奖项",
+    "demo": "演示"
   }
 }
