分页时增加 loading 动画
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -130,7 +130,6 @@
     "ds": "Data Structure",
     "ds_pop": "Used {num} main data structure(s)",
     "algs": "Algorithm",
-    "algs_pop": "Used {num} main algorithm(s)",
-    "loading": "Loading data. It may take one minute or two."
+    "algs_pop": "Used {num} main algorithm(s)"
   }
 }
