--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -130,7 +130,6 @@
     "ds": "数据结构",
     "ds_pop": "使用了 {num} 种主要的数据结构",
     "algs": "算法",
-    "algs_pop": "使用了 {num} 种主要的算法",
-    "loading": "加载数据中，这可能需要一分钟。"
+    "algs_pop": "使用了 {num} 种主要的算法"
   }
 }
