修复：里程碑未完待续的英文翻译；合并里程碑页面到简介；修复：里程碑未完待续应放在最顶部
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -78,7 +78,7 @@
     "warning": "This page may contain information about the plot."
   },
   "milestone": {
-    "pending": "Pending..."
+    "pending": "To be continued..."
   },
   "reserved": {
     "title": "This page is not ready for showing.",
