--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -161,5 +161,13 @@
     "twitter": "Twitter",
     "linkedin": "LinkedIn",
     "secret": "THIS IS A SECRET"
+  },
+  "food": {
+    "seen": "Seen and recorded",
+    "seen_at": "Seen on {date} and recorded",
+    "ate": "Ate in some restaurant",
+    "ate_at": "Ate on {date} in some restaurant",
+    "fired": "Fired personally",
+    "fired_at": "Fired on {date} personally"
   }
 }
