--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -178,5 +178,9 @@
     "cluster": "There are {count} records here",
     "date": "Arrived on {date} ",
     "name": "Arrived at {name}"
+  },
+  "exam": {
+    "total": "Total",
+    "sum": "Sum"
   }
 }
