permalink 移动到 settings
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,7 +1,7 @@
 {
   "welcome": "Welcome",
   "updated": "Last updated on",
-  "permalink": "Please visit https://resume.jxtxzzw.com/ to see up-dated version",
+  "permalink": "Please visit {link} to see up-dated version",
   "navigation": {
     "blog": "Blog",
     "resume": "Resume",
