增加微信视频号
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -161,6 +161,7 @@
     "bilibili": "Bilibili",
     "bilibili_live": "Bilibili Live",
     "wechat_mp": "WeChat MP",
+    "wechat_video": "WeChat Video",
     "facebook": "Facebook",
     "youtube": "YouTube",
     "twitter": "Twitter",
