--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -161,6 +161,7 @@
     "bilibili": "哔哩哔哩",
     "bilibili_live": "哔哩哔哩直播间",
     "wechat_mp": "微信公众号",
+    "wechat_video": "微信视频号",
     "facebook": "Facebook",
     "youtube": "YouTube",
     "twitter": "Twitter",
