Feature: Income Basic Category
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -193,5 +193,9 @@
   },
   "life": {
     "event": "Event"
+  },
+  "income": {
+    "basic-year": "Income for each year",
+    "basic-category": "Income for categories"
   }
 }
