Feature: Income Basic Accumulated
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -196,6 +196,7 @@
   },
   "income": {
     "basic-year": "每年收入",
-    "basic-category": "收入类型"
+    "basic-category": "收入类型",
+    "basic-accumulated": "收入汇总"
   }
 }
