--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -196,6 +196,7 @@
   },
   "income": {
     "basic-year": "Income for each year",
-    "basic-category": "Income for categories"
+    "basic-category": "Income for categories",
+    "basic-accumulated": "Accumulated incomes"
   }
 }
