--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -197,6 +197,9 @@
   "income": {
     "basic-year": "每年收入",
     "basic-category": "收入类型",
-    "basic-accumulated": "收入汇总"
+    "basic-accumulated": "收入汇总",
+    "10k": "万元",
+    "advanced-year": "每年额外收入",
+    "advanced-platform": "额外收入平台"
   }
 }
