--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -23,6 +23,7 @@
     "publication": "Publication",
     "honor": "Honor",
     "exhibit": "Exhibit",
+    "course": "Course",
     "exam": "Exam",
     "coding": "Coding Problem",
     "technique": "Technique",
