--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -23,6 +23,7 @@
     "publication": "出版",
     "honor": "荣誉榜",
     "exhibit": "陈列室",
+    "course": "课程",
     "exam": "考试成绩",
     "coding": "编程题",
     "technique": "技术栈",
