影音增加纪录片
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -96,6 +96,7 @@
     "tv": "TV Series",
     "movie": "Movie",
     "anime": "Anime",
+    "documentary": "Documentary",
     "done": "Watched/Listened",
     "done_at": "Watched/Listened on {date}",
     "doing": "Watching/Listening",
