--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -26,7 +26,7 @@
     "course": "Course",
     "exam": "Exam",
     "coding": "Coding Problem",
-    "technique": "Technique",
+    "tech": "Technology",
     "media": "Media",
     "footprint": "Footprint",
     "photo": "Photo",
