--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -26,7 +26,7 @@
     "course": "课程",
     "exam": "考试成绩",
     "coding": "编程题",
-    "technique": "技术栈",
+    "tech": "技术栈",
     "media": "影音",
     "footprint": "足迹",
     "photo": "摄像",
