--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -31,7 +31,7 @@
     "footprint": "Footprint",
     "photo": "Photo",
     "food": "Food",
-    "wish": "Wish",
+    "dream": "Dream",
     "moment": "Moment",
     "microblog": "MicroBlog",
     "income": "Income",
@@ -211,5 +211,11 @@
     "10k": "(x10,000)",
     "advanced-year": "Advanced Income for Each Year",
     "advanced-platform": "Advanced Income for Platforms"
+  },
+  "dream": {
+    "born": "Born",
+    "prepare": "Prepare",
+    "enjoy": "Enjoy",
+    "done": "Done"
   }
 }
