增加 Steam, BattleNet, Origin 图标
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -72,7 +72,10 @@
     "Android": "Android",
     "iOS": "iOS",
     "PC": "PC",
-    "default": ""
+    "default": "",
+    "Steam": "Steam",
+    "BattleNet": "Blizzard Battle.Net",
+    "Origin": "Origin"
   },
   "fiction": {
     "title": "书名",
