增加 Epic, UPlay 图标，将默认修改为“不适用
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -72,10 +72,12 @@
     "Android": "Android",
     "iOS": "iOS",
     "PC": "PC",
-    "default": "",
+    "default": "N/A",
     "Steam": "Steam",
     "BattleNet": "Blizzard Battle.Net",
-    "Origin": "Origin"
+    "Origin": "Origin",
+    "Epic": "Epic",
+    "UPlay": "UbiSoft UPlay"
   },
   "fiction": {
     "title": "Title",
