--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -72,10 +72,12 @@
     "Android": "Android",
     "iOS": "iOS",
     "PC": "PC",
-    "default": "",
+    "default": "不适用",
     "Steam": "Steam",
     "BattleNet": "Blizzard Battle.Net",
-    "Origin": "Origin"
+    "Origin": "Origin",
+    "Epic": "Epic",
+    "UPlay": "UbiSoft UPlay"
   },
   "fiction": {
     "title": "书名",
