Add more game status
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -62,7 +62,9 @@
     "done_at": "Accomplished on {date}",
     "doing": "Playing",
     "todo": "Scheduling",
-    "disabled": "Ultimated (Sandbox, MOBA, etc.)",
+    "disabled": "N/A",
+    "aborted": "AFK",
+    "returning": "Back from AFK",
     "message": "Ratings and reviews are personal.",
     "warning": "This page may contain information about the plot.",
     "platform": "Platform",
