--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -62,7 +62,9 @@
     "done_at": "已于 {date} 通关",
     "doing": "游戏中",
     "todo": "计划中",
-    "disabled": "无限通关（沙盒、对战等）",
+    "disabled": "不适用",
+    "aborted": "弃坑",
+    "returning": "回归",
     "message": "评分和评价仅代表个人意见。",
     "warning": "本页面可能包含剧透内容。",
     "platform": "游戏平台",
