--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -79,7 +79,8 @@
     "BattleNet": "Blizzard Battle.Net",
     "Origin": "Origin",
     "Epic": "Epic",
-    "UPlay": "UbiSoft UPlay"
+    "UPlay": "UbiSoft UPlay",
+    "WiiU": "Nintendo WiiU"
   },
   "fiction": {
     "title": "Title",
