--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -227,8 +227,8 @@
     "basic-category": "收入类型",
     "basic-accumulated": "收入汇总",
     "10k": "万元",
-    "advanced-year": "每年额外收入",
-    "advanced-platform": "额外收入平台"
+    "advanced-year": "每年被动收入",
+    "advanced-platform": "被动收入平台"
   },
   "dream": {
     "born": "萌芽",
