--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -32,6 +32,7 @@
     "footprint": "Footprint",
     "photo": "Photo",
     "food": "Food",
+    "activity": "Activity",
     "dream": "Dream",
     "moment": "Moment",
     "microblog": "MicroBlog",
