--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -32,6 +32,7 @@
     "footprint": "足迹",
     "photo": "摄像",
     "food": "美食",
+    "activity": "活动",
     "dream": "愿望",
     "moment": "时刻",
     "microblog": "轻博客",
