新增：图片版权来源
Signed-off-by: Zhenwei Zhang <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -124,7 +124,8 @@
   },
   "photo": {
     "date": "Taken on {date}",
-    "info": "Description: {info}"
+    "info": "Description: {info}",
+    "credit": "Credit To: {credit}"
   },
   "exhibit": {
     "date": "Date: {date}",
