新增类别：讲座
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -115,6 +115,7 @@
     "movie": "Movie",
     "anime": "Anime",
     "documentary": "Documentary",
+    "lecture": "Lecture",
     "done": "Watched/Listened",
     "done_at": "Watched/Listened on {date}",
     "doing": "Watching/Listening",
