--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -115,6 +115,7 @@
     "movie": "电影",
     "anime": "动漫",
     "documentary": "纪录片",
+    "lecture": "讲座",
     "done": "已欣赏",
     "done_at": "已于 {date} 欣赏",
     "doing": "欣赏中",
