新增：收入按币种展示或整体展示
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -226,6 +226,9 @@
     "event": "Event"
   },
   "income": {
+    "currency": "Show by Currency",
+    "open": "ON",
+    "close": "OFF",
     "basic-year": "Income for Each Year",
     "basic-category": "Income for Categories",
     "basic-accumulated": "Accumulated Incomes",
