--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -226,6 +226,9 @@
     "event": "事件"
   },
   "income": {
+    "currency": "按币种展示",
+    "open": "是",
+    "close": "否",
     "basic-year": "每年收入",
     "basic-category": "收入类型",
     "basic-accumulated": "收入汇总",
