--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -231,7 +231,7 @@
     "close": "否",
     "basic-year": "每年收入",
     "basic-category": "收入类型",
-    "basic-accumulated": "收入汇总",
+    "all-accumulated": "收入汇总",
     "10k": "万元",
     "advanced-year": "每年被动收入",
     "advanced-platform": "被动收入平台"
