新增：可用资产
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -234,6 +234,7 @@
     "all-accumulated": "Accumulated Income",
     "10k": "(x10,000)",
     "advanced-year": "Advanced Income for Each Year",
-    "advanced-platform": "Advanced Income for Platforms"
+    "advanced-platform": "Advanced Income for Platforms",
+    "balance": "Balance"
   }
 }
