--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -234,6 +234,7 @@
     "all-accumulated": "收入汇总",
     "10k": "万元",
     "advanced-year": "每年被动收入",
-    "advanced-platform": "被动收入平台"
+    "advanced-platform": "被动收入平台",
+    "balance": "可用资产"
   }
 }
