新增：信用分
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -38,7 +38,8 @@
     "microblog": "MicroBlog",
     "income": "Income",
     "life": "Life",
-    "creation": "Creation"
+    "creation": "Creation",
+    "credit": "Credit Score"
   },
   "certificate": {
     "specialization": "Part of {specialization} Specialization",
