新增：生活增加展示位维度
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -225,7 +225,9 @@
     "sum": "Sum"
   },
   "life": {
-    "event": "Event"
+    "event": "Event",
+    "till": "till",
+    "now": "now"
   },
   "income": {
     "currency": "Show by Currency",
