--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -225,7 +225,9 @@
     "sum": "总分"
   },
   "life": {
-    "event": "事件"
+    "event": "事件",
+    "till": "至",
+    "now": "今"
   },
   "income": {
     "currency": "按币种展示",
